[gd_scene load_steps=25 format=3 uid="uid://tpvpkv3eid7i"]

[ext_resource type="PackedScene" uid="uid://ckvaaln275hfv" path="res://game/weapons/guns/common/gun.tscn" id="1_av5tx"]
[ext_resource type="Script" path="res://game/weapons/guns/i_need_more_bullets/i_need_more_bullets.gd" id="2_a8qdj"]
[ext_resource type="AudioStream" uid="uid://btyf0why553e7" path="res://game/weapons/guns/i_need_more_bullets/equip.wav" id="2_s2bv5"]
[ext_resource type="Texture2D" uid="uid://cgesfo7e4s3ua" path="res://game/weapons/guns/i_need_more_bullets/gun.png" id="3_4v22u"]
[ext_resource type="AudioStream" uid="uid://cs10xsax2mt6s" path="res://game/weapons/guns/i_need_more_bullets/single_shot.wav" id="3_gssxa"]
[ext_resource type="PackedScene" uid="uid://ll80nn6exap3" path="res://game/weapons/guns/i_need_more_bullets/single_need_bullet.tscn" id="3_vt8b5"]
[ext_resource type="Texture2D" uid="uid://cxtrp8qu6t7cn" path="res://game/weapons/guns/i_need_more_bullets/magazine.png" id="4_7epqc"]
[ext_resource type="PackedScene" uid="uid://bh8r5gsd6ghjm" path="res://game/weapons/guns/i_need_more_bullets/need_bullet.tscn" id="4_f0y0x"]
[ext_resource type="AudioStream" uid="uid://dbdcdmwfdu77b" path="res://game/weapons/guns/i_need_more_bullets/reload.wav" id="4_mlykw"]
[ext_resource type="AudioStream" uid="uid://dmga2aoukx48n" path="res://game/weapons/guns/i_need_more_bullets/switch_single.wav" id="8_2rkf8"]
[ext_resource type="AudioStream" uid="uid://cb7drxrleuutq" path="res://game/weapons/guns/i_need_more_bullets/switch.wav" id="8_g15ve"]
[ext_resource type="AudioStream" uid="uid://3x7pp3u6qyl7" path="res://game/weapons/guns/i_need_more_bullets/shooting.wav" id="8_iqst8"]
[ext_resource type="Texture2D" uid="uid://5ss0ntgl5ida" path="res://game/weapons/guns/i_need_more_bullets/aim.png" id="12_si2f5"]

[sub_resource type="Curve" id="Curve_wj8nx"]
max_value = 7.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.343643, 0.418637), 0.0, 0.0, 0, 0, Vector2(1, 7), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_qervo"]
min_value = -6.0
max_value = 0.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.257732, 0), 0.0, 0.0, 0, 0, Vector2(0.498282, -3.68846), 0.0, 0.0, 0, 0, Vector2(1, -6), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_hhsl4"]
min_value = -8.0
max_value = 0.0
_data = [Vector2(0, -8), 0.0, 0.0, 0, 0, Vector2(0.501718, 0), 0.0, 0.0, 0, 0, Vector2(1, -8), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_7gqo2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:rotation")
tracks/1/interp = 3
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base/Magazine:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Base/Magazine:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Base/Magazine:rotation")
tracks/4/interp = 3
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_x4ipw"]
resource_name = "Reload"
length = 2.65
step = 0.05
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_mlykw")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1.85, 2, 2.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-8, 8), Vector2(-8, 8), Vector2(-8, 8), Vector2(-8, 8), Vector2(-16, 12), Vector2(-5, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base:rotation")
tracks/2/interp = 4
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1.7, 1.75, 1.85, 2.2, 2.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.17227, 6.11092, 6.11092, 6.11092, 6.04546, 6.04546, 6.12435]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Base/Magazine:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Base/Magazine:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9, 1.2, 1.5, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 2, 0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 48), Vector2(-94, -27), Vector2(-36.1547, 21.115), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Base/Magazine:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.9, 1.2, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.238108, 0.0]
}

[sub_resource type="Animation" id="Animation_x0rqv"]
resource_name = "Equip"
length = 1.1
step = 0.05
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_s2bv5")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-14, 21), Vector2(7, -9), Vector2(6, -6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base:rotation")
tracks/2/interp = 4
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.541248, -0.204099, 6.10264]
}

[sub_resource type="Animation" id="Animation_np4wt"]
resource_name = "SingleShot"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 5.8663, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-4, 0), Vector2(-16, 0), Vector2(0, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SingleShotSFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_gssxa")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_gcooj"]
resource_name = "Shoot"
length = 0.18
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.18),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.101071, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_rndj6"]
resource_name = "PostReload"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5, 5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:rotation")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.12435, 0.0]
}

[sub_resource type="Animation" id="Animation_ejvsm"]
resource_name = "PostEquip"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, -6), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:rotation")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.10264, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ohb8l"]
_data = {
&"RESET": SubResource("Animation_7gqo2"),
&"Reload": SubResource("Animation_x4ipw"),
&"Equip": SubResource("Animation_x0rqv"),
&"SingleShot": SubResource("Animation_np4wt"),
&"Shoot": SubResource("Animation_gcooj"),
&"PostReload": SubResource("Animation_rndj6"),
&"PostEquip": SubResource("Animation_ejvsm")
}

[node name="INeedMoreBullets" instance=ExtResource("1_av5tx")]
script = ExtResource("2_a8qdj")
single_shoot_interval = 1.0
single_ammo_per_shot = 4
single_projectile_scene = ExtResource("3_vt8b5")
shoot_interval = 0.2
to_aim_time = 0.2
projectile_scene = ExtResource("4_f0y0x")
spread_base = 4.0
spread_walk = 10.0
spread_curve = SubResource("Curve_wj8nx")
spread_reset_time = 1.3
recoil_curve = SubResource("Curve_qervo")
recoil_curve_time = 4.0
recoil_cycle_curve = SubResource("Curve_hhsl4")
recoil_increasing_time = 0.3
recoil_reset_time = 1.2
ammo_per_load = 25
ammo_total = 100
speed_multiplier_when_current = 0.96

[node name="ShootPoint" parent="." index="0"]
position = Vector2(236, -34)

[node name="AnimationPlayer" parent="." index="1"]
libraries = {
&"": SubResource("AnimationLibrary_ohb8l")
}

[node name="SFX" type="AudioStreamPlayer2D" parent="." index="2"]
max_distance = 1600.0
bus = &"SFX"

[node name="SwitchSFX" type="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource("8_g15ve")
max_distance = 1600.0
bus = &"SFX"

[node name="SwitchSingleSFX" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource("8_2rkf8")
max_distance = 1600.0
bus = &"SFX"

[node name="Base" type="Sprite2D" parent="." index="5"]
texture = ExtResource("3_4v22u")
offset = Vector2(96, -20)

[node name="Magazine" type="Sprite2D" parent="Base" index="0"]
show_behind_parent = true
texture = ExtResource("4_7epqc")
offset = Vector2(96, -20)

[node name="Aim" type="Sprite2D" parent="Base" index="1"]
visible = false
show_behind_parent = true
texture = ExtResource("12_si2f5")
offset = Vector2(96, -20)

[node name="ShootingSFX" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource("8_iqst8")
max_distance = 2560.0
bus = &"SFX"

[node name="SingleShotSFX" type="AudioStreamPlayer2D" parent="." index="7"]
max_distance = 3040.0
bus = &"SFX"

[node name="ShootingTimer" type="Timer" parent="." index="8"]
one_shot = true

[connection signal="timeout" from="ShootingTimer" to="ShootingSFX" method="stop"]
